# promptgen

./: Cargo.toml  README.md  sample_prompts.txt
lexer/src/: chunker.rs  lexer.rs  lib.rs  parser.rs
prompter/: Cargo.toml  labelless_prompt.txt  simple_prompt.txt
prompter/src/: lib.rs
src/: lib.rs
