[workspace]
members = ["lexer", "prompter"]

[workspace.dependencies]
lexer = { path = "./lexer/" }
prompter = { path = "./prompter/" }

[package]
name = "promptgen"
version = "0.3.0"
edition = "2021"
authors = ["Arijit Dasgupta <arijit@dazgupta.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lexer = { path = "./lexer/" }
prompter = { path = "./prompter/" }

